--- a/plotting.html
+++ b/plotting.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>  
   <head>
-    <title>Brendan - How I got here</title>
+    <title>Brendan - Plotting Tips & Tricks</title>
     <meta charset="utf-8">
     <meta name="keywords" content>
     <meta name="author" content="Brendan Erhard">
@@ -49,8 +49,8 @@
     <nav>
         <a href="/html/index.html" id="branding">Brendan</a>
         <a href="/html/about.html" >About</a>
-        <a href="/html/mystory.html"class="active">My Story</a> 
-        <a href="/html/work.html" >Work</a> 
+        <a href="/html/mystory.html">My Story</a> 
+        <a href="/html/work.html"class="active" >Work</a> 
         <a href="/html/fun.html">When Not Working</a>   
     </nav>
     
@@ -65,8 +65,19 @@
         <img src="/img/annotate_plit.png" srcset=""alt="annotate-plt">
         <figcaption>Annotating plots in matplotlib.pyplot</figcaption>
       </figure>
-    <hr class="dashed">
-   
+    <figure>
+        <img src="/img/break5.png" srcset=""alt="break">
+    </figure>
+      <p></p>
+      <h4>Multiple plots using subplots</h4>
+      <p></p>
+      <figure>
+        <img src="/img/subplot_code.png" srcset=""alt="subplot-code">
+      </figure>
+      <figure>
+        <img src="/img/subplot.png" srcset=""alt="subplot">
+        <figcaption>subplots using matplotlib</figcaption>
+      </figure>
     <footer>
       <hr/>
       <div class="contact">
