--- a/project1.html
+++ b/project1.html
@@ -49,18 +49,20 @@
       <a href="/html/index.html" id="branding">Brendan</a>
       <a href="/html/about.html">About</a>
       <a href="/html/mystory.html">My Story</a> 
-      <a href="/html/work.html">Work</a> 
+      <a href="/html/work.html"class="active" >Work</a> 
       <a href="/html/fun.html">When Not Working</a>  
     </nav>
     <br>
     <h2>How many Python files did I create in order to become Pythonic?</h2>
     <h3>Answer: 286 Jupyter files pre-COVID, 263 files post-COVID; 119 Visual Studio Python files pre-COVID, 181 Python files post-COVID</h3>
-    <p>Context: The first time it sunk in for me that COVID-19 was more than something trivial was the night of March 11, 2020 and it all occured in a span of about 35 minutes. Obviously I was aware of the virus - rising uncertainty about the contagion had ended the 11-year bull market run, with stocks down over 20% from prior peaks in February. Like any other evening on the 11th, a Wednesday, I was watching baskeball before heading to bed. Shortly after 9:00 PM, actor Tom Hanks took to social media that he and his wife had tested positive for the virus. </p>
-    <p>Then, at 9:27 PM, hyper-vigilant NBA reporter and twitter fiend Shams Charania <span><a href="https://twitter.com/ShamsCharania/status/1237913057596026881?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1237913057596026881%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.nbcsports.com%2Fnorthwest%2Fportland-trail-blazers%2Fnba-suspends-season-indefinitely-after-rudy-gobert-tests-positive-covid-19" target="_blank"> reported </a></span>
-    that Utah Jazz player Rudy Gobert had tested positive for the virus. (Earlier in the day, as part of a pre-game media session, Gobert had mocked the at-the-time hyperbole of the virus and touched all open microphones at the podium with his massive hands). Charania followed up minutes later with another <span><a href="https://twitter.com/shamscharania/status/1237914142033444864?lang=en" target="_blank"> tweet</a></span>, reporting that the NBA season had been indefinitely suspended. The sequence of events - Tom Hanks, Rudy Gobert with the red breaking news banner on ESPN.com, shortly followed by the NBA season suspended, all in a span of 32 minutes and which I followed in real time - sounded alarm bells in my head. </p>
-    <p>And then we all stayed home, and in my free time, over countless hours on learning platforms such as udemy and Datacamp; hundreds of videos watched on YouTube; and intensive practice writing code for projects, I learned python.</p>
-    <p>Twenty years after 9/11, and 548 days after I began my intensive python learning binge, I was curious to know how much time I had spent using and learning python during the pandemic, and I knew the exact tool to help me do it: python.</p>
-    <p>Below is a visualization of all the python files I created and the date the file was created. The two data sets refer to Jupyer Notebook files (".ipynb.") and those created on Visual Studio Code (".py"). The complete code can be accessed at this link <span><a href="https://nbviewer.jupyter.org/github/bme3412/Python/blob/main/Projects/The%20Journey.ipynb" target="_blank"> here</a></span>, but below I have replicated the most important parts of the code. </p>
+    <p>September 11, 2021</p>
+    <p>Context: The first time it sunk in for me that COVID-19 was more than something trivial was the night of March 11, 2020 and it all occured in a span of about 35 minutes. Obviously I was aware of the virus - rising uncertainty about the contagion had ended the 11-year bull market run, with stocks down over 20% from prior peaks in February. Like any other evening on the 11th, a Wednesday, I was watching baskeball before heading to bed. Shortly after 9:00 PM, actor Tom Hanks took to social media that he and his wife had tested positive for the virus. <br>
+    <br>Then, at 9:27 PM, hyper-vigilant NBA reporter and twitter fiend Shams Charania <span><a href="https://twitter.com/ShamsCharania/status/1237913057596026881?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1237913057596026881%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.nbcsports.com%2Fnorthwest%2Fportland-trail-blazers%2Fnba-suspends-season-indefinitely-after-rudy-gobert-tests-positive-covid-19" target="_blank"> reported </a></span>
+    that Utah Jazz player Rudy Gobert had tested positive for the virus. (Earlier in the day, as part of a pre-game media session, Gobert had mocked the at-the-time hyperbole of the virus and touched all open microphones at the podium with his massive hands). Charania followed up minutes later with another <span><a href="https://twitter.com/shamscharania/status/1237914142033444864?lang=en" target="_blank"> tweet</a></span>, reporting that the NBA season had been indefinitely suspended. The sequence of events - Tom Hanks, Rudy Gobert with the red breaking news banner on ESPN.com, shortly followed by the NBA season suspended, all in a span of 32 minutes and which I followed in real time - sounded alarm bells in my head.<br>
+    <br>And then we all stayed home, and in my free time, over countless hours on learning platforms such as udemy and Datacamp; hundreds of videos watched on YouTube; and intensive practice writing code for projects, I learned python.<br>
+    <br>Twenty years after 9/11, and 548 days after I began my intensive python learning binge, I was curious to know how much time I had spent using and learning python during the pandemic, and I knew the exact tool to help me do it: python.<br>
+    <br>
+    Below is a visualization of all the python files I created and the date the file was created. The two data sets refer to Jupyer Notebook files (".ipynb.") and those created on Visual Studio Code (".py"). The complete code can be accessed at this link <span><a href="https://nbviewer.jupyter.org/github/bme3412/Python/blob/main/Projects/The%20Journey.ipynb" target="_blank"> here</a></span>, but below I have replicated the most important parts of the code. </p>
     <figure>
         <img src="/img/python_files.png" srcset=""alt="python-graph">
         <figcaption>A look at my journey through the wonderful world of python</figcaption>
@@ -204,10 +206,9 @@
       <img src="/img/sum_files_covid.png" srcset=""alt="sum_files_covid">
       <figcaption>Sum of the files uploaded across each of the 4 dataframes</figcaption>
     </figure>
-    <h3>Now, I am really curious to know if there was a correlated effect of  coronavirus cases and # of python files uploaded --  so now I introduce a new data set</h3>
-    <p>See below a dataset for new coronavirus cases, sourced from ...</p>
-    
-    <h3>Overlay of coronavirus data</h3>
+    <h3>Now, I am really curious to know if there was a correlated effect of  coronavirus cases and # of python files uploaded --  so now I introduce a new data set</h3><br>
+    <p>
+    <h2>Overlay of coronavirus data</h2>
     <figure>
       <img src="/img/python_covid_code.png" srcset=""alt="python-covid-code">
       <figcaption>Code for plotting python files created vs new COVID cases in the United States</figcaption>
@@ -231,8 +232,6 @@
       <img src="/img/words_of_code.png" srcset=""alt="words-of-code">
       <figcaption>Total words of code across Python files</figcaption>
     </figure>
-    <h3>How much time spent coding out of 10k hours?</h3>
-    <h3>run prediction for when to hit 10,000 hours, and how many lines of code</h3>
     <h3>What days and times of day was I most active?</h3>
     <p>I was a weekend warrior.</p>
     <figure>
