--- a/fun.html
+++ b/fun.html
@@ -66,6 +66,9 @@
       <img src="/img/eiffel.jpeg" srcset=""alt="eiffel tower">
       <figcaption>Back to where my interest in investing all began - trying to blend in as a local @ Paris, France in 2018</figcaption>
     </figure>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <br>
     <br>
     <figure>
@@ -73,65 +76,113 @@
       <figcaption>Down under - one of my many trips around the globe @ Sydney, Australia</figcaption>
     </figure>
     <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+    <figure>
       <img src="/img/ferrari.jpeg" srcset=""alt="ferrari">
       <figcaption>When in southern France @ Eze, Côte d'Azur, France</figcaption>
     </figure>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <figure>
       <img src="/img/lebron.jpeg" srcset=""alt="lebron">
       <figcaption>Lebron James put on a show @ Boston, Massachusetts</figcaption>
     </figure>
     <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+    <figure>
       <img src="/img/tacko.png" srcset=""alt="tacko">
       <figcaption>Running into 7'5" Tack Fall while he was getting sized for a suit to conduct the Boston Pops @ Boston, Massachusetts</figcaption>
     </figure>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <figure>
       <img src="/img/safari.png" srcset=""alt="safari">
       <figcaption>On safari @ Chobe National Park, Botswana</figcaption>
     </figure>
     <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+    <figure>
       <img src="/img/stbarts.png" srcset=""alt="stbarts">
-      <figcaption>Carribean vibes @ St. Barts</figcaption>
+      <figcaption>Caribbean vibes @ St. Barts</figcaption>
     </figure>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <figure>
       <img src="/img/mostar.png" srcset=""alt="mostar">
       <figcaption>Sweeping views @ Mostar, Bosnia and Herzegovina</figcaption>
     </figure>
     <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+    <figure>
       <img src="/img/china.png" srcset=""alt="china">
       <figcaption>in Beijing @ Mu Tian Yu Lu,‎ Beijing</figcaption>
     </figure>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <figure>
       <img src="/img/southafrica.png" srcset=""alt="south-africa">
       <figcaption>The most south-western point of Africa @ Good Hope, Western Cape, South Africa</figcaption>
     </figure>
     <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+    <figure>
       <img src="/img/indonesia.png" srcset=""alt="indonesia">
       <figcaption>Off the grid, @ Gili Meno islands, Indonesia</figcaption>
     </figure>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <figure>
       <img src="/img/mallorca.png" srcset=""alt="mallorca">
       <figcaption>Enjoying some sun @ Cala d'Or, Mallorca, Spain</figcaption>
     </figure>
     <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+    <figure>
       <img src="/img/austria.jpg" srcset=""alt="austria">
       <figcaption>Strolling @ Schloss Schönbrunn Palace, Vienna, Austria</figcaption>
     </figure>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <figure>
       <img src="/img/belize.jpg" srcset=""alt="belize">
       <figcaption>Belizian sunsets @ Caye Caulker, Belize</figcaption>
     </figure>
     <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+    <figure>
       <img src="/img/dubrovnik.png" srcset=""alt="dubrovnik">
       <figcaption>The narrow streets of Dubrovnik, Croatia</figcaption>
     </figure>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <figure>
       <img src="/img/montenegro.png" srcset=""alt="montenegro">
       <figcaption>Montenegro from above @ Kotor, Montenegro</figcaption>
     </figure>
     <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
+    <figure>
       <img src="/img/hongkong.png" srcset=""alt="hongkong">
       <figcaption>The urban density of Hong Kong</figcaption>
     </figure>
+    <figure>
+      <img src="/img/break5.png" srcset=""alt="break">
+  </figure>
     <figure>
       <img src="/img/sushi.png" srcset=""alt="sushi">
       <figcaption>The real deal - sushi in a small shop below an elevated railway that causes the building to shake when trains pass overhead @ Sushi Zanmai, Ginza, Tokyo </figcaption>
